# internal/infrastructure/http/openapi/gen.go
@@ -1,0 +1,352 @@
+// Package openapi provides primitives to interact with the openapi HTTP API.
+//
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.1 DO NOT EDIT.
+package openapi
+
+import (
+	"fmt"
+	"net/http"
+	"time"
+
+	"github.com/go-chi/chi/v5"
+	"github.com/oapi-codegen/runtime"
+)
+
+// Defines values for QuoteUpdateDetailsStatus.
+const (
+	Completed QuoteUpdateDetailsStatus = "completed"
+	Failed    QuoteUpdateDetailsStatus = "failed"
+	Pending   QuoteUpdateDetailsStatus = "pending"
+)
+
+// LastQuote defines model for LastQuote.
+type LastQuote struct {
+	// Pair Currency pair
+	Pair string `json:"pair"`
+
+	// Price Last quote price
+	Price *float32 `json:"price,omitempty"`
+
+	// UpdatedAt Timestamp of the quote
+	UpdatedAt time.Time `json:"updated_at"`
+}
+
+// QuoteUpdateDetails defines model for QuoteUpdateDetails.
+type QuoteUpdateDetails struct {
+	// Error Error message (if status is failed)
+	Error *string `json:"error"`
+
+	// Pair Currency pair
+	Pair string `json:"pair"`
+
+	// Price Quote price (if available)
+	Price *float32 `json:"price"`
+
+	// Status Status of the update request
+	Status QuoteUpdateDetailsStatus `json:"status"`
+
+	// UpdateId Unique identifier for the update request
+	UpdateId string `json:"update_id"`
+
+	// UpdatedAt Timestamp of the update
+	UpdatedAt time.Time `json:"updated_at"`
+}
+
+// QuoteUpdateDetailsStatus Status of the update request
+type QuoteUpdateDetailsStatus string
+
+// QuoteUpdateRequest defines model for QuoteUpdateRequest.
+type QuoteUpdateRequest struct {
+	// Pair Currency pair (e.g., USD/EUR)
+	Pair string `json:"pair"`
+}
+
+// QuoteUpdateResponse defines model for QuoteUpdateResponse.
+type QuoteUpdateResponse struct {
+	// UpdateId Unique identifier for the update request
+	UpdateId string `json:"update_id"`
+}
+
+// GetLastQuoteParams defines parameters for GetLastQuote.
+type GetLastQuoteParams struct {
+	// Pair Currency pair (e.g., USD/EUR)
+	Pair string `form:"pair" json:"pair"`
+}
+
+// RequestQuoteUpdateParams defines parameters for RequestQuoteUpdate.
+type RequestQuoteUpdateParams struct {
+	// XIdempotencyKey Idempotency key for the request
+	XIdempotencyKey *string `json:"X-Idempotency-Key,omitempty"`
+}
+
+// RequestQuoteUpdateJSONRequestBody defines body for RequestQuoteUpdate for application/json ContentType.
+type RequestQuoteUpdateJSONRequestBody = QuoteUpdateRequest
+
+// ServerInterface represents all server handlers.
+type ServerInterface interface {
+	// Get last quote for a currency pair
+	// (GET /quotes/last)
+	GetLastQuote(w http.ResponseWriter, r *http.Request, params GetLastQuoteParams)
+	// Request a quote update
+	// (POST /quotes/updates)
+	RequestQuoteUpdate(w http.ResponseWriter, r *http.Request, params RequestQuoteUpdateParams)
+	// Get quote update status
+	// (GET /quotes/updates/{id})
+	GetQuoteUpdate(w http.ResponseWriter, r *http.Request, id string)
+}
+
+// Unimplemented server implementation that returns http.StatusNotImplemented for each endpoint.
+
+type Unimplemented struct{}
+
+// Get last quote for a currency pair
+// (GET /quotes/last)
+func (_ Unimplemented) GetLastQuote(w http.ResponseWriter, r *http.Request, params GetLastQuoteParams) {
+	w.WriteHeader(http.StatusNotImplemented)
+}
+
+// Request a quote update
+// (POST /quotes/updates)
+func (_ Unimplemented) RequestQuoteUpdate(w http.ResponseWriter, r *http.Request, params RequestQuoteUpdateParams) {
+	w.WriteHeader(http.StatusNotImplemented)
+}
+
+// Get quote update status
+// (GET /quotes/updates/{id})
+func (_ Unimplemented) GetQuoteUpdate(w http.ResponseWriter, r *http.Request, id string) {
+	w.WriteHeader(http.StatusNotImplemented)
+}
+
+// ServerInterfaceWrapper converts contexts to parameters.
+type ServerInterfaceWrapper struct {
+	Handler            ServerInterface
+	HandlerMiddlewares []MiddlewareFunc
+	ErrorHandlerFunc   func(w http.ResponseWriter, r *http.Request, err error)
+}
+
+type MiddlewareFunc func(http.Handler) http.Handler
+
+// GetLastQuote operation middleware
+func (siw *ServerInterfaceWrapper) GetLastQuote(w http.ResponseWriter, r *http.Request) {
+
+	var err error
+
+	// Parameter object where we will unmarshal all parameters from the context
+	var params GetLastQuoteParams
+
+	// ------------- Required query parameter "pair" -------------
+
+	if paramValue := r.URL.Query().Get("pair"); paramValue != "" {
+
+	} else {
+		siw.ErrorHandlerFunc(w, r, &RequiredParamError{ParamName: "pair"})
+		return
+	}
+
+	err = runtime.BindQueryParameter("form", true, true, "pair", r.URL.Query(), &params.Pair)
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "pair", Err: err})
+		return
+	}
+
+	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.GetLastQuote(w, r, params)
+	}))
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler.ServeHTTP(w, r)
+}
+
+// RequestQuoteUpdate operation middleware
+func (siw *ServerInterfaceWrapper) RequestQuoteUpdate(w http.ResponseWriter, r *http.Request) {
+
+	var err error
+
+	// Parameter object where we will unmarshal all parameters from the context
+	var params RequestQuoteUpdateParams
+
+	headers := r.Header
+
+	// ------------- Optional header parameter "X-Idempotency-Key" -------------
+	if valueList, found := headers[http.CanonicalHeaderKey("X-Idempotency-Key")]; found {
+		var XIdempotencyKey string
+		n := len(valueList)
+		if n != 1 {
+			siw.ErrorHandlerFunc(w, r, &TooManyValuesForParamError{ParamName: "X-Idempotency-Key", Count: n})
+			return
+		}
+
+		err = runtime.BindStyledParameterWithOptions("simple", "X-Idempotency-Key", valueList[0], &XIdempotencyKey, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationHeader, Explode: false, Required: false})
+		if err != nil {
+			siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "X-Idempotency-Key", Err: err})
+			return
+		}
+
+		params.XIdempotencyKey = &XIdempotencyKey
+
+	}
+
+	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.RequestQuoteUpdate(w, r, params)
+	}))
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler.ServeHTTP(w, r)
+}
+
+// GetQuoteUpdate operation middleware
+func (siw *ServerInterfaceWrapper) GetQuoteUpdate(w http.ResponseWriter, r *http.Request) {
+
+	var err error
+
+	// ------------- Path parameter "id" -------------
+	var id string
+
+	err = runtime.BindStyledParameterWithOptions("simple", "id", chi.URLParam(r, "id"), &id, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true})
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "id", Err: err})
+		return
+	}
+
+	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.GetQuoteUpdate(w, r, id)
+	}))
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler.ServeHTTP(w, r)
+}
+
+type UnescapedCookieParamError struct {
+	ParamName string
+	Err       error
+}
+
+func (e *UnescapedCookieParamError) Error() string {
+	return fmt.Sprintf("error unescaping cookie parameter '%s'", e.ParamName)
+}
+
+func (e *UnescapedCookieParamError) Unwrap() error {
+	return e.Err
+}
+
+type UnmarshalingParamError struct {
+	ParamName string
+	Err       error
+}
+
+func (e *UnmarshalingParamError) Error() string {
+	return fmt.Sprintf("Error unmarshaling parameter %s as JSON: %s", e.ParamName, e.Err.Error())
+}
+
+func (e *UnmarshalingParamError) Unwrap() error {
+	return e.Err
+}
+
+type RequiredParamError struct {
+	ParamName string
+}
+
+func (e *RequiredParamError) Error() string {
+	return fmt.Sprintf("Query argument %s is required, but not found", e.ParamName)
+}
+
+type RequiredHeaderError struct {
+	ParamName string
+	Err       error
+}
+
+func (e *RequiredHeaderError) Error() string {
+	return fmt.Sprintf("Header parameter %s is required, but not found", e.ParamName)
+}
+
+func (e *RequiredHeaderError) Unwrap() error {
+	return e.Err
+}
+
+type InvalidParamFormatError struct {
+	ParamName string
+	Err       error
+}
+
+func (e *InvalidParamFormatError) Error() string {
+	return fmt.Sprintf("Invalid format for parameter %s: %s", e.ParamName, e.Err.Error())
+}
+
+func (e *InvalidParamFormatError) Unwrap() error {
+	return e.Err
+}
+
+type TooManyValuesForParamError struct {
+	ParamName string
+	Count     int
+}
+
+func (e *TooManyValuesForParamError) Error() string {
+	return fmt.Sprintf("Expected one value for %s, got %d", e.ParamName, e.Count)
+}
+
+// Handler creates http.Handler with routing matching OpenAPI spec.
+func Handler(si ServerInterface) http.Handler {
+	return HandlerWithOptions(si, ChiServerOptions{})
+}
+
+type ChiServerOptions struct {
+	BaseURL          string
+	BaseRouter       chi.Router
+	Middlewares      []MiddlewareFunc
+	ErrorHandlerFunc func(w http.ResponseWriter, r *http.Request, err error)
+}
+
+// HandlerFromMux creates http.Handler with routing matching OpenAPI spec based on the provided mux.
+func HandlerFromMux(si ServerInterface, r chi.Router) http.Handler {
+	return HandlerWithOptions(si, ChiServerOptions{
+		BaseRouter: r,
+	})
+}
+
+func HandlerFromMuxWithBaseURL(si ServerInterface, r chi.Router, baseURL string) http.Handler {
+	return HandlerWithOptions(si, ChiServerOptions{
+		BaseURL:    baseURL,
+		BaseRouter: r,
+	})
+}
+
+// HandlerWithOptions creates http.Handler with additional options
+func HandlerWithOptions(si ServerInterface, options ChiServerOptions) http.Handler {
+	r := options.BaseRouter
+
+	if r == nil {
+		r = chi.NewRouter()
+	}
+	if options.ErrorHandlerFunc == nil {
+		options.ErrorHandlerFunc = func(w http.ResponseWriter, r *http.Request, err error) {
+			http.Error(w, err.Error(), http.StatusBadRequest)
+		}
+	}
+	wrapper := ServerInterfaceWrapper{
+		Handler:            si,
+		HandlerMiddlewares: options.Middlewares,
+		ErrorHandlerFunc:   options.ErrorHandlerFunc,
+	}
+
+	r.Group(func(r chi.Router) {
+		r.Get(options.BaseURL+"/quotes/last", wrapper.GetLastQuote)
+	})
+	r.Group(func(r chi.Router) {
+		r.Post(options.BaseURL+"/quotes/updates", wrapper.RequestQuoteUpdate)
+	})
+	r.Group(func(r chi.Router) {
+		r.Get(options.BaseURL+"/quotes/updates/{id}", wrapper.GetQuoteUpdate)
+	})
+
+	return r
+}
